fix: button and popup on mobile

--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@ p {
 .glass-button {
     display: inline-block;
     padding: 24px 24px;
+    margin: 5px;
     border: 0;
     text-decoration: none;
     border-radius: 15px;
@@ -150,7 +151,7 @@ p {
     height: 100%;
     opacity: 0;
     backdrop-filter: blur(0);
-    transition: 1s;
+    transition: .5s;
     cursor: pointer;
 }
 
@@ -163,11 +164,11 @@ p {
 .glass-popup {
     visibility: hidden;
     position: fixed;
-    margin: auto 10%;
     z-index: 2;
     padding: 40px;
-    display: inline-block;
-    border: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-decoration: none;
     border-radius: 15px;
     background-color: rgba(56, 56, 56, 0.1);
@@ -237,6 +238,22 @@ p {
     font-weight: bold;
 }
 
+@media (min-width: 641px) {
+    .glass-popup {
+        margin: auto 10%;
+    }
+}
+
+@media (max-width: 640px) {
+    .glass-popup {
+        margin: 20px;
+    }
+
+    .input-submit {
+        width: 70%;
+    }
+}
+
 .flexbox {
     display: flex;
     flex-direction: column;
@@ -261,4 +278,30 @@ p {
     opacity: 40%;
     transition: .2s;
     padding: 8px;
+}
+
+.button-bar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.delay-1s {
+    opacity: 0;
+    animation-delay: 1s;
+}
+
+.delay-1dot5s {
+    opacity: 0;
+    animation-delay: 1.5s;
+}
+
+.delay-2s {
+    opacity: 0;
+    animation-delay: 2s;
+}
+
+.delay-3s {
+    opacity: 0;
+    animation-delay: 3s;
 }
